--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -1,12 +1,22 @@
 <div class="ui grid stackable">
     <div class="row">
         <div class="sixteen wide column">
-            {{#tabbed-navigation isNonPointing=true}} {{#link-to 'admin.users.list' 'all' class='item'}} All Users {{/link-to}}
-            {{#link-to 'admin.users.list' 'active' class='item'}} Active Users {{/link-to}} {{#link-to 'admin.users.list'
-            'deleted' class='item'}} Deleted Users {{/link-to}} {{/tabbed-navigation}}
+            {{#tabbed-navigation isNonPointing=true}}
+                {{#link-to 'admin.users.list' 'all' class='item'}} All Users {{/link-to}}
+                {{#link-to 'admin.users.list' 'active' class='item'}} Active Users {{/link-to}}
+                {{#link-to 'admin.users.list' 'deleted' class='item'}} Deleted Users {{/link-to}}
+                <form class="ui form" {{action 'findUser' on="submit"}}>
+                    <div class="field">
+                        <div class="ui icon input">
+                            {{input type="text" autocomplete='off' value=userEmail placeholder="Search User..."}}
+                            <i class="search icon" onclick={{action 'findUser'}}></i>
+                        </div>
+                    </div>
+                </form>
+            {{/tabbed-navigation}}
         </div>
     </div>
     <div class="row">
-        {{outlet}}
+        {{outlet searchedUser=searchedUser}}
     </div>
 </div>
