--- a/frontend/app/templates/components/data-component/name-component.hbs
+++ b/frontend/app/templates/components/data-component/name-component.hbs
@@ -1,3 +1,3 @@
 <div class="field">
-    {{textarea name="formNameData" rows="1" value=formNameData placeholder="My Badge"}}
+    {{input name="formNameData" value=formNameData placeholder="Add a name for your badges"}}
 </div>
