Simplifies the admin index panel

--- a/frontend/app/templates/admin/index.hbs
+++ b/frontend/app/templates/admin/index.hbs
@@ -9,12 +9,8 @@
     <div class="row">
         <div class="five wide column">
             <div class="ui center aligned fluid segment">
-                <h3 class="ui left aligned header">
-                    Badges
-                </h3>
-                <div class="ui divider"></div>
                 <h3 class="ui header">
-                    Number of Badges Generated
+                    Badges Generated
                 </h3>
                 <div class="ui small statistic">
                     <div class="label">
@@ -30,10 +26,6 @@
         </div>
         <div class="six wide column">
             <div class="ui fluid center aligned segment">
-                <h3 class="ui left aligned header">
-                    Messages
-                </h3>
-                <div class="ui divider"></div>
                 <h3 class="ui header">
                     No. of Sent Mails
                 </h3>
@@ -69,11 +61,6 @@
         </div>
         <div class="five wide column">
             <div class="ui center aligned fluid segment">
-                <h3 class="ui left aligned header">
-                    Users
-                </h3>
-                <div class="ui divider">
-                </div>
                 <h3 class="ui header">
                     System Roles
                 </h3>
