--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -165,8 +165,12 @@
             {{/if}}
         </div>
     </div>
-    <div class="{{if previewToggled 'five' ''}} wide column">
+    <div class="{{if previewToggled 'five' ''}} wide column preview">
         <!--Add Preview Section here-->
+        {{ user-component/preview fn=firstName ln=lastName org=organization sh=socialHandle
+            desg=designation defColor=defFontColor font_fn=defFont1Size font_ln=defFont2Size
+            font_desg=defFont3Size font_org=defFont4Size font_sh=defFont5Size defFont=defFont
+            defImageName=defImageName backImg=prevImageData defImage=defImage custImage=custImage}}
     </div>
 </div>
 
