--- a/frontend/app/templates/components/user-table.hbs
+++ b/frontend/app/templates/components/user-table.hbs
@@ -6,6 +6,7 @@
             <th>User Email</th>
             <th class="no-sort">User Role</th>
             <th>User Created At</th>
+            <th>Last Login Date</th>
             <th class="no-sort">Last Login IP</th>
             <th class="no-sort">Actions</th>
         </tr>
@@ -20,6 +21,11 @@
                     <td>{{users.email}}</td>
                     <td>{{extract-role users}}</td>
                     <td>{{sanitizeDate users.created_at}}</td>
+                    {{#if users.lastLoginDate}}
+                        <td>{{sanitizeDate users.lastLoginDate}}</td>
+                    {{else}}
+                        <td>Not Logged In Yet</td>
+                    {{/if}}
                     {{#if users.lastLoginIp}}
                         <td>{{users.lastLoginIp}}</td>
                     {{else}}
@@ -54,6 +60,11 @@
                         <td data-sort-value={{extract-time-stamp user.deleted_at}}>{{sanitizeDate user.deleted_at}}</td>
                     {{else}}
                         <td data-sort-value="0">Not Yet</td>
+                    {{/if}}
+                    {{#if user.lastLoginDate}}
+                        <td>{{sanitizeDate user.lastLoginDate}}</td>
+                    {{else}}
+                        <td>Not Logged In Yet</td>
                     {{/if}}
                     {{#if user.lastLoginIp}}
                         <td>{{user.lastLoginIp}}</td>
