Remove Sign In with Facebook from Login options

--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -48,12 +48,14 @@
             <span class="log-text">Login with Google +</span>
           </button>
         </div>
-        <div class="buttons">
+        <div class="ui horizontal divider"></div>
+<!--    <div class="buttons">
           <button type="button" class="ui facebook button capital large-oauth" {{ action 'logIn' 'facebook' }}>
             <i class="facebook icon o-icon"></i>
             <span class="log-text">Login with Facebook</span>
           </button>
         </div>
+-->
         <div class="buttons">
           <button type="button" class="ui twitter button capital large-oauth" {{ action 'logIn' 'twitter' }}>
             <i class="twitter icon o-icon"></i>
